syntax = "proto3";

message FuzzArgsProfile {
  repeated int32 fuzzvar0 = 1;
  repeated int32 fuzzvar1 = 2;
  repeated int32 fuzzvar2 = 3;
  repeated int32 fuzzvar3 = 4;
  repeated int32 fuzzvar13 = 5;
  repeated int32 fuzzvar14 = 6;
  repeated int32 fuzzvar15 = 7;
  bytes fuzzvar16 = 8;
  bytes fuzzvar17 = 9;
  repeated int32 fuzzvar18 = 10;
}

